PYIC-8335: fix event and states names being cut off by max-width

--- a/journey-map/public/style.css
+++ b/journey-map/public/style.css
@@ -77,7 +77,6 @@ body {
 #diagram > * {
   height: 100%;
   width: 100%;
-  max-width: unset !important;
 }
 form {
   flex: 0 1 525px;
@@ -227,4 +226,7 @@ form fieldset p {
 }
 .mitigationTransition {
   background-color: #e4c4ff;
+}
+span.edgeLabel > p {
+  text-wrap: wrap;
 }
